2003-01-18  Axel Simon <A.Simon@ukc.ac.uk>

	* gtk/windows/Plug.chs, gtk/embedding/Plug.chs: Moved this file
	to make compiling on Windows easier (omit embedding/ completely)

	* c2hs/c/CParser.hs: Fixed a parser bug for gcc extensions which
	became apparent when compiling on Windows (__dllexport).

	* gtk/general/Structs.hsc, gtk/embedding/Sockets.chs: Quick fix
	to compile on Windows. Declarations in Structs need to be moved
	to embedding/ so it is left out when compiling on Windows.

2003-01-11  Jens Petersen  <petersen@haskell.org>

	* gtk/treeList/TreeStore.chs (treeStoreRemove): lift to Bool

	* gtk/treeList/ListStore.chs (listStoreRemove): lift to Bool

	* gtk/general/Structs.hsc (fromResponse): parenthesize
	ResponseUser i and add fromIntegral on rhs
	(toResponse): add fromIntegral for ResponseUser

	* demo/graphic/Drawing.hs (main): use ResponseOk

2003-01-10  Jens Petersen  <petersen@haskell.org>

	* configure.in: add gtk2hs.spec to output list

	* gtk2hs.spec.in: new file to generate a project rpm spec file

2003-01-10  Jens Petersen  <petersen@haskell.org>

	* demo/unicode/Arabic.hs (main): use ResponseYes, ResponseCancel
	and ResponseOk

	* gtk/windows/Dialog.chs: import and re-export ResponseId instead
	of responseName's.  import fromResponse and toResponse.
	(dialogRun): use toResponse
	(dialogResponse): use fromResponse
	(dialogAddButton): use fromResponse
	(dialogAddActionWidget): use fromResponse
	(dialogSetDefaultResponse): fromResponse
	(dialogSetResponseSensitive): fromResponse
	(onResponse, afterResponse): toResponse

	* gtk/general/Structs.hsc: export fromResponse and toResponse,
	instead of all the responseName's.  ResponseId is now a datatype.
	fromResponse converts from a ResponseId to the corresponding gtk
	constant values.  toResponse does the reverse map.  ResponseUser
	Int carries positive integer user defined responses.  fromResponse
	and toResponse are only defined for positive integers.

2002-12-19 Axel Simon <A.Simon@ukc.ac.uk>
